--- a/index.html
+++ b/index.html
@@ -7,24 +7,18 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 
-
 <body>
 
-    <h1>This is a h1 heading</h1>
+  <h1>Recepten Huize Borgman</h1>
 
-    <a class="twitter-timeline" data-width="300" data-height="400" data-theme="dark" href="https://twitter.com/crownux_alex?ref_src=twsrc%5Etfw">Tweets by crownux_alex</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>    
+  <a href="index.html">Home</a>
+  <a href="Ontbijt.html">Ontbijt</a>
+  <a href="Lunch.html">Lunch</a>
+  <a href="Diner.html">Diner</a>
+  <a href="Nagerecht.html">Nagerecht</a>
 
-    <h2>PUN intended</h2>
-    <img src="images/pic1.jpg" alt="pun" style="width:441px;height:378px;">
+ 
 
-    <h3>This is a h3 heading</h3>
-    <audio controls>
-        <source src="mp3/BGM Title.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
-    <h4>This is a h4 heading</h4>
-    <h5>This is a h5 heading</h5>
-    <h6>This is a h6 heading</h6>
 
 </body>
 
