--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
 
   <h1>Recepten Huize Borgman</h1>
-
-  <a href="index.html">Home</a>
-  <a href="Ontbijt.html">Ontbijt</a>
-  <a href="Lunch.html">Lunch</a>
-  <a href="Diner.html">Diner</a>
-  <a href="Nagerecht.html">Nagerecht</a>
-
- 
-
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="Ontbijt.html">Ontbijt</a></li>
+    <li><a href="Lunch.html">Lunch</a></li>
+    <li><a href="Diner.html">Diner</a></li>
+    <li><a href="Nagerecht.html">Nagerecht</a></li>
+  </ul>
+</nav>
 
 </body>
 
