--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
+    <li><a href="Voorgerecht.html">Voorgerechten</a></li>
     <li><a href="Ontbijt.html">Ontbijt</a></li>
     <li><a href="Lunch.html">Lunch</a></li>
     <li><a href="Diner.html">Diner</a></li>
