aded margin and width

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   </ul>
 </nav>
 
+<p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
+
 </body>
 
 
