--- a/Ontbijt.html
+++ b/Ontbijt.html
@@ -21,7 +21,7 @@
 </header>
 <body>
 
-<p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
+<H1>Ontbijt</H1>
 
 </body>
 
