--- a/Voorgerecht.html
+++ b/Voorgerecht.html
@@ -21,7 +21,7 @@
 </header>
 <body>
 
-<p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
+<h1>Voorgerechten</h1>
 
 </body>
 
