--- a/Lunch.html
+++ b/Lunch.html
@@ -5,6 +5,7 @@
         Project Learning the basics
     </title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
     <h1>Recepten Huize Borgman</h1>
@@ -21,7 +22,7 @@
 </header>
 <body>
 
-<h1>Lunch</h1>>
+<h1>Lunch</h1>
 </body>
 
 
