--- a/Nagerecht.html
+++ b/Nagerecht.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>
-        Project Learning the basics
-    </title>
+    <title>Project Learning the basics</title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
     <h1>Recepten Huize Borgman</h1>
@@ -18,11 +17,8 @@
         <li><a href="Nagerecht.html">Nagerecht</a></li>
       </ul>
     </nav>
-</header>
-<body>
-
-<h1>Nagerechten</h1>>
-</body>
-
-
+</header> 
+  <body>
+    <h1>Nagerechten</h1>
+  </body>
 </html>
