--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         Project Learning the basics
     </title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
     <h1>Recepten Huize Borgman</h1>
@@ -20,8 +21,8 @@
     </nav>
 </header>
 <body>
-
-<p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
+  <h1>Home</h1>
+  <p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
 
 </body>
 
