--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   <h1>Home</h1>
   <p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
 
+<footer>
+  <p>Webdesign: Alex Borgman 2020</p>
+</footer>
 </body>
-
-
 </html>
