--- a/index.html
+++ b/index.html
@@ -21,11 +21,41 @@
     </nav>
 </header>
 <body>
+
   <h1>Home</h1>
   <p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
 
+<div id="blokken">
+  <div class="block">
+      <h1>Titel recept</h1>
+      <H2>Ingredienten</H2>
+      <p>
+          <ul>
+              <li>Bruine bonen</li>
+              <li>Tomatenpuree</li>
+              <li>Gehakt</li>
+              <li>Cayenne peper</li>
+          </ul>
+      </p>
+  </div>
+  <div class="block">
+      <h1>Bereiding</h1>
+      <p>
+        <ul>
+            <li>Bak het gehakt rul</li>
+            <li>Kruid met cayenne peper</li>
+            <li>Voeg tomatenpuree toe</li>
+            <li>Voeg bruine bonen toe</li>
+            <li>Laat alles 10 minuten sudderen</li>
+        </ul>
+    </p>
+  </div>
+  <div class="block">
+      <h1>Recept categorie</h1>
+  </div>
+</div>
 <footer>
-  <p>Webdesign: Alex Borgman 2020</p>
+    <p>Webdesign: Alex Borgman 2020</p>
 </footer>
 </body>
 </html>
