Changed a lot of things around

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Voorgerecht.html">Voorgerechten</a></li>
         <li><a href="Ontbijt.html">Ontbijt</a></li>
         <li><a href="Lunch.html">Lunch</a></li>
-        <li><a href="Diner.html">Diner</a></li>
+        <li><a href="hoofdgerechten.html">Hoofdgerechten</a></li>
+        <li><a href="Voorgerecht.html">Voorgerechten</a></li>
         <li><a href="Nagerecht.html">Nagerecht</a></li>
+        <li><a href="salade-soep.html">Salades / Soep</a></li>
       </ul>
     </nav>
 </header>
@@ -27,31 +28,34 @@
 
 <div id="blokken">
   <div class="block">
-      <h1>Titel recept</h1>
-      <H2>Ingredienten</H2>
+      <img src="images/breakfast.jpg" width="275" alt="Plaatje ontbijt">
+      <h1>Ontbijt</h1>
       <p>
           <ul>
-              <li>Bruine bonen</li>
-              <li>Tomatenpuree</li>
-              <li>Gehakt</li>
-              <li>Cayenne peper</li>
+              <li></li>
+              <li></li>
           </ul>
       </p>
   </div>
   <div class="block">
-      <h1>Bereiding</h1>
+      <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
+      <h1>Lunch</h1>
       <p>
         <ul>
-            <li>Bak het gehakt rul</li>
-            <li>Kruid met cayenne peper</li>
-            <li>Voeg tomatenpuree toe</li>
-            <li>Voeg bruine bonen toe</li>
-            <li>Laat alles 10 minuten sudderen</li>
+            <li></li>
+            <li></li>
         </ul>
-    </p>
+     </p>
   </div>
   <div class="block">
-      <h1>Recept categorie</h1>
+      <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
+      <h1>Hoofdgerechten</h1>
+      <p>
+        <ul>
+            <li></li>
+            <li></li>
+        </ul>
+     </p>
   </div>
 </div>
 <footer>
