--- a/Ontbijt.html
+++ b/Ontbijt.html
@@ -12,9 +12,9 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="Voorgerecht.html">Voorgerechten</a></li>
-        <li><a href="Ontbijt.html">Ontbijt</a></li>
-        <li><a href="Lunch.html">Lunch</a></li>
+        <li><a href="voorgerecht.html">Voorgerechten</a></li>
+        <li><a href="ontbijt.html">Ontbijt</a></li>
+        <li><a href="lunch.html">Lunch</a></li>
         <li><a href="Diner.html">Diner</a></li>
         <li><a href="Nagerecht.html">Nagerecht</a></li>
       </ul>
@@ -28,3 +28,4 @@
 
 
 </html>
+
