--- a/index.html
+++ b/index.html
@@ -14,50 +14,41 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="Ontbijt.html">Ontbijt</a></li>
         <li><a href="Lunch.html">Lunch</a></li>
-        <li><a href="hoofdgerechten.html">Hoofdgerechten</a></li>
-        <li><a href="Voorgerecht.html">Voorgerechten</a></li>
+        <li><a href="hoofdgerechten.html">Hoofdgerecht</a></li>
+        <li><a href="Voorgerecht.html">Voorgerecht</a></li>
         <li><a href="Nagerecht.html">Nagerecht</a></li>
-        <li><a href="salade-soep.html">Salades / Soep</a></li>
+        <li><a href="salade-soep.html">Salade / Soep</a></li>
       </ul>
     </nav>
 </header>
 <body>
-
-  <h1>Home</h1>
-  <p>Deze website is gemaakt om online ook toegang te hebben tot alle recepten die thuis gebruikt worden.</p>
-
 <div id="blokken">
   <div class="block">
-      <img src="images/breakfast.jpg" width="275" alt="Plaatje ontbijt">
-      <h1>Ontbijt</h1>
-      <p>
-          <ul>
-              <li></li>
-              <li></li>
-          </ul>
-      </p>
+    <h2>Ontbijt</h2>
+    <img src="images/breakfast.jpg" width="275" alt="Plaatje ontbijt">
   </div>
   <div class="block">
-      <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
-      <h1>Lunch</h1>
-      <p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-     </p>
+    <h2>Lunch</h2>
+    <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
   </div>
   <div class="block">
-      <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
-      <h1>Hoofdgerechten</h1>
-      <p>
-        <ul>
-            <li></li>
-            <li></li>
-        </ul>
-     </p>
+    <h2>Hoofdgerecht</h2>
+    <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
+  </div>
+  <div class="block">
+    <h2>Voorgerecht</h2>
+    <img src="images/voorgerecht.jpeg" width="275" alt="Plaatje ontbijt">
+  </div>
+  <div class="block">
+    <h2>Nagerecht</h2>
+    <img src="images/nagerecht.jpg" width="275" alt="Plaatje lunch">
+  </div>
+  <div class="block">
+    <h2>Salade / Soep</h2>
+    <img src="images/salade.jpg" width="275" alt="Plaatje avondeten">
   </div>
 </div>
+
 <footer>
     <p>Webdesign: Alex Borgman 2020</p>
 </footer>
