Changed some picture on home

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="blokken">
   <div class="block">
     <h2>Ontbijt</h2>
-    <img src="images/breakfast.jpg" width="275" alt="Plaatje ontbijt">
+    <img src="images/breakfast.jpg" width="275" width="315" alt="Plaatje ontbijt">
   </div>
   <div class="block">
     <h2>Lunch</h2>
@@ -37,15 +37,15 @@
   </div>
   <div class="block">
     <h2>Voorgerecht</h2>
-    <img src="images/voorgerecht.jpeg" width="275" alt="Plaatje ontbijt">
+    <img src="images/voorgerecht.jpg" width="275" alt="Plaatje voorgerecht">
   </div>
   <div class="block">
     <h2>Nagerecht</h2>
-    <img src="images/nagerecht.jpg" width="275" alt="Plaatje lunch">
+    <img src="images/nagerecht.jpg" width="275" alt="Plaatje nagerecht">
   </div>
   <div class="block">
     <h2>Salade / Soep</h2>
-    <img src="images/salade.jpg" width="275" alt="Plaatje avondeten">
+    <img src="images/salade.jpg" width="275" alt="Plaatje salade">
   </div>
 </div>
 
