--- a/index copy.html
+++ b/index copy.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Project Learning the basics</title>
+    <title>
+        Project Learning the basics
+    </title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
-  <h1>Recepten Huize Borgman</h1>
+    <h1>Recepten Huize Borgman</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Ontbijt.html">Ontbijt</a></li>
+        <li><a href="Lunch.html">Lunch</a></li>
+        <li><a href="hoofdgerechten.html">Hoofdgerecht</a></li>
+        <li><a href="Voorgerecht.html">Voorgerecht</a></li>
+        <li><a href="Nagerecht.html">Nagerecht</a></li>
+        <li><a href="salade-soep.html">Salade / Soep</a></li>
+      </ul>
+    </nav>
 </header>
-    <div id="navbar">
-      <a href="index.html">Home</a>
-      <a href="ontbijt.html">Ontbijt</a>
-      <a href="lunch.html">Lunch</a>
-      <a href="hoofdgerechten.html">Hoofdgerecht</a>
-      <a href="voorgerecht.html">Voorgerecht</a>
-      <a href="nagerecht.html">Nagerecht</a>
-      <a href="salade-soep.html">Salade / Soep</a>
-    </div>
 <body>
 <div id="blokken">
   <div class="block">
-    <h3>Ontbijt</h3>
+    <h2>Ontbijt</h2>
     <img src="images/breakfast.jpg" width="275" width="315" alt="Plaatje ontbijt">
   </div>
   <div class="block">
-    <h3>Lunch</h3>
+    <h2>Lunch</h2>
     <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
   </div>
   <div class="block">
-    <h3>Hoofdgerecht</h3>
+    <h2>Hoofdgerecht</h2>
     <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
   </div>
   <div class="block">
-    <h3>Voorgerecht</h3>
+    <h2>Voorgerecht</h2>
     <img src="images/voorgerecht.jpg" width="275" alt="Plaatje voorgerecht">
   </div>
   <div class="block">
-    <h3>Nagerecht</h3>
+    <h2>Nagerecht</h2>
     <img src="images/nagerecht.jpg" width="275" alt="Plaatje nagerecht">
   </div>
   <div class="block">
-    <h3>Salade / Soep</h3>
+    <h2>Salade / Soep</h2>
     <img src="images/salade.jpg" width="275" alt="Plaatje salade">
   </div>
 </div>
