--- a/Nagerecht.html
+++ b/Nagerecht.html
@@ -6,18 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <header>
-    <h1>Recepten Huize Borgman</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Voorgerecht.html">Voorgerechten</a></li>
-        <li><a href="Ontbijt.html">Ontbijt</a></li>
-        <li><a href="Lunch.html">Lunch</a></li>
-        <li><a href="Diner.html">Diner</a></li>
-        <li><a href="Nagerecht.html">Nagerecht</a></li>
-      </ul>
-    </nav>
-</header> 
+  <h1>Recepten Huize Borgman</h1>
+</header>
+    <div id="navbar">
+      <a href="index.html">Home</a>
+      <a href="ontbijt.html">Ontbijt</a>
+      <a href="lunch.html">Lunch</a>
+      <a href="hoofdgerechten.html">Hoofdgerecht</a>
+      <a href="voorgerecht.html">Voorgerecht</a>
+      <a href="nagerecht.html">Nagerecht</a>
+      <a href="salade-soep.html">Salade / Soep</a>
+    </div>
   <body>
     <h1>Nagerechten</h1>
   </body>
