--- a/salade-soep.html
+++ b/salade-soep.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Project Learning the basics</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    <h1>Recepten Huize Borgman</h1>
+  </header>
+      <div id="navbar">
+        <a href="index.html">Home</a>
+        <a href="ontbijt.html">Ontbijt</a>
+        <a href="lunch.html">Lunch</a>
+        <a href="hoofdgerechten.html">Hoofdgerecht</a>
+        <a href="voorgerecht.html">Voorgerecht</a>
+        <a href="nagerecht.html">Nagerecht</a>
+        <a href="salade-soep.html">Salade / Soep</a>
+      </div>
 <body>
     
 </body>
