--- a/hoofdgerechten.html
+++ b/hoofdgerechten.html
@@ -22,6 +22,21 @@
 <body>
 <h1>Hoofdgerechten</h1>
 
+<div id="blokken">
+  <div class="block">
+    <h3>Chili con carne</h3>
+    <img src="images/chili-con-carne.jpg" width="275" alt="Plaatje chili con carne">
+  </div>
+  <div class="block">
+    <h3>Nasi goreng</h3>
+    <img src="images/Nasi.jpg" width="275" alt="Plaatje nasi">
+  </div>
+  <div class="block">
+    <h3>Hoofdgerecht</h3>
+    <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
+
+</div>
+
 </body>
 
 
