--- a/index copy.html
+++ b/index copy.html
@@ -9,6 +9,10 @@
 </head>
 <header>
     <h1>Recepten Huize Borgman</h1>
+    <li>test</li>
+    <li>t</li>
+    <li>test3</li>
+    <li>test4</li>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
