commented out a div

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="salade-soep.html">Salade / Soep</a>
     </div>
 <body>
-<div id="blokken">
+<!-- <div id="blokken"> -->
   <div class="block">
     <h3>Ontbijt</h3>
     <img src="images/breakfast.jpg" width="275" width="315" alt="Plaatje ontbijt">
@@ -43,7 +43,7 @@
     <h3>Salade / Soep</h3>
     <img src="images/salade.jpg" width="275" alt="Plaatje salade">
   </div>
-</div>
+<!-- </div> -->
 
 <footer>
     <p>Webdesign: Alex Borgman 2020</p>
