cleaned up code

--- a/index.html
+++ b/index.html
@@ -1,52 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="nl">
 <head>
     <title>Project Learning the basics</title>
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<body>
+
 <header>
   <h1>Recepten Huize Borgman</h1>
 </header>
-    <div id="navbar">
-      <a href="index.html">Home</a>
-      <a href="ontbijt.html">Ontbijt</a>
-      <a href="lunch.html">Lunch</a>
-      <a href="hoofdgerechten.html">Hoofdgerecht</a>
-      <a href="voorgerecht.html">Voorgerecht</a>
-      <a href="nagerecht.html">Nagerecht</a>
-      <a href="salade-soep.html">Salade / Soep</a>
-    </div>
-<body>
-<!-- <div id="blokken"> -->
+
+  <div id="navbar">
+    <a href="index.html">Home</a>
+    <a href="ontbijt.html">Ontbijt</a>
+    <a href="lunch.html">Lunch</a>
+    <a href="hoofdgerechten.html">Hoofdgerecht</a>
+    <a href="voorgerecht.html">Voorgerecht</a>
+    <a href="nagerecht.html">Nagerecht</a>
+    <a href="salade-soep.html">Salade / Soep</a>
+  </div>
+
   <div class="block">
-    <h3>Ontbijt</h3>
-    <img src="images/breakfast.jpg" width="275" width="315" alt="Plaatje ontbijt">
+    <a href="ontbijt.html">
+      <h3>Ontbijt</h3>
+      <img src="images/breakfast.jpg" width="275" alt="Plaatje ontbijt">
+    </a>
   </div>
   <div class="block">
-    <h3>Lunch</h3>
-    <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
+    <a href="lunch.html">
+      <h3>Lunch</h3>
+      <img src="images/lunch.jpg" width="275" alt="Plaatje lunch">
+    </a>
   </div>
   <div class="block">
-    <h3>Hoofdgerecht</h3>
-    <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
+    <a href="hoofdgerechten.html">
+      <h3>Hoofdgerecht</h3>
+      <img src="images/dinner.jpg" width="275" alt="Plaatje avondeten">
+    </a>
   </div>
   <div class="block">
-    <h3>Voorgerecht</h3>
-    <img src="images/voorgerecht.jpg" width="275" alt="Plaatje voorgerecht">
+    <a href="voorgerecht.html">
+      <h3>Voorgerecht</h3>
+      <img src="images/voorgerecht.jpg" width="275" alt="Plaatje voorgerecht">
+    </a>
   </div>
   <div class="block">
-    <h3>Nagerecht</h3>
-    <img src="images/nagerecht.jpg" width="275" alt="Plaatje nagerecht">
+    <a href="nagerecht.html">
+      <h3>Nagerecht</h3>
+      <img src="images/nagerecht.jpg" width="275" alt="Plaatje nagerecht">
+    </a>
   </div>
   <div class="block">
-    <h3>Salade / Soep</h3>
-    <img src="images/salade.jpg" width="275" alt="Plaatje salade">
+    <a href="salade-soep.html">
+      <h3>Salade / Soep</h3>
+      <img src="images/salade.jpg" width="275" alt="Plaatje salade">
+    </a>
   </div>
-<!-- </div> -->
 
 <footer>
     <p>Webdesign: Alex Borgman 2020</p>
 </footer>
+
 </body>
 </html>
