--- a/hoofdgerechten.html
+++ b/hoofdgerechten.html
@@ -14,7 +14,7 @@
       <a href="index.html">Home</a>
       <a href="ontbijt.html">Ontbijt</a>
       <a href="lunch.html">Lunch</a>
-      <a href="hoofdgerechten.html">Hoofdgerecht</a>
+      <a href="hoofdgerechten.html" class="active_link">Hoofdgerecht</a>
       <a href="voorgerecht.html">Voorgerecht</a>
       <a href="nagerecht.html">Nagerecht</a>
       <a href="salade-soep.html">Salade / Soep</a>
