--- a/lunch.html
+++ b/lunch.html
@@ -16,7 +16,7 @@
     <div id="navbar">
       <a href="index.html">Home</a>
       <a href="ontbijt.html">Ontbijt</a>
-      <a href="lunch.html">Lunch</a>
+      <a href="lunch.html" class="active_link">Lunch</a>
       <a href="hoofdgerechten.html">Hoofdgerecht</a>
       <a href="voorgerecht.html">Voorgerecht</a>
       <a href="nagerecht.html">Nagerecht</a>
