--- a/nagerecht.html
+++ b/nagerecht.html
@@ -14,7 +14,7 @@
       <a href="lunch.html">Lunch</a>
       <a href="hoofdgerechten.html">Hoofdgerecht</a>
       <a href="voorgerecht.html">Voorgerecht</a>
-      <a href="nagerecht.html">Nagerecht</a>
+      <a href="nagerecht.html" class="active_link">Nagerecht</a>
       <a href="salade-soep.html">Salade / Soep</a>
     </div>
   <body>
