--- a/ontbijt.html
+++ b/ontbijt.html
@@ -12,7 +12,7 @@
 </header>
     <div id="navbar">
       <a href="index.html">Home</a>
-      <a href="ontbijt.html">Ontbijt</a>
+      <a href="ontbijt.html" class="active_link">Ontbijt</a>
       <a href="lunch.html">Lunch</a>
       <a href="hoofdgerechten.html">Hoofdgerecht</a>
       <a href="voorgerecht.html">Voorgerecht</a>
