--- a/salade-soep.html
+++ b/salade-soep.html
@@ -17,7 +17,7 @@
         <a href="hoofdgerechten.html">Hoofdgerecht</a>
         <a href="voorgerecht.html">Voorgerecht</a>
         <a href="nagerecht.html">Nagerecht</a>
-        <a href="salade-soep.html">Salade / Soep</a>
+        <a href="salade-soep.html" class="active_link">Salade / Soep</a>
       </div>
 <body>
 <h1>Salades / Soepen</h1>
