--- a/voorgerecht.html
+++ b/voorgerecht.html
@@ -15,7 +15,7 @@
       <a href="ontbijt.html">Ontbijt</a>
       <a href="lunch.html">Lunch</a>
       <a href="hoofdgerechten.html">Hoofdgerecht</a>
-      <a href="voorgerecht.html">Voorgerecht</a>
+      <a href="voorgerecht.html" class="active_link">Voorgerecht</a>
       <a href="nagerecht.html">Nagerecht</a>
       <a href="salade-soep.html">Salade / Soep</a>
     </div>
